--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "Lập Phiếu Nhận Hàng";
+    ViewBag.Title = "Nhập Kho";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div hidden id="ID"></div>
 <div class="card card-custom">
     <div class="card-header">
         <h3 class="card-title">
-            Lập Phiếu Nhận Hàng
+            Nhập Kho
         </h3>
     </div>
     <!--begin::Form-->
@@ -91,9 +91,6 @@
                 <span name="warehouse"></span>
             </div>
         </div>
-
-
-
         <div class="form-group  row tablenhan">
             <label for="example-search-input" class="col-2 col-form-label">Hàng Hóa<span style="color:red"> (*) </span></label>
             <div class="col-10" style="height: 500px;overflow-y: scroll;">
@@ -248,8 +245,6 @@
         } else {
             $("#HandHeld").hide()
             }
-            rfid.statusEvent = "statusEvent(%json)";
-            rfid.tagEvent = "TagHandler(%json)";
             RFIDEnumrate()
         });
         
@@ -352,12 +347,11 @@
         function RFIDEnumrate() {
 
             rfid.transport = 'serial'
-            rfid.readerID = 'RFID1';
             rfid.enumerate();
-            setTimeout(function () {
-                rfid.connect();
-            }, 1000);
-        
+            rfid.readerID = 'RFID1';
+            rfid.connect();
+        rfid.statusEvent = "statusEvent(%json)";
+        rfid.tagEvent = "TagHandler(%json)";
         }
 
 
