--- a/iGMS/Views/Shared/_Layout.cshtml
+++ b/iGMS/Views/Shared/_Layout.cshtml
@@ -106,14 +106,6 @@
                                                         <span class="menu-text">Lập Đơn Hàng/Đặt Hàng Mua</span>
                                                     </a>
                                                 </li>
-                                                <li class="menu-item" aria-haspopup="true">
-                                                    <a name="PurchaseManager" href="/Receipt/Index" class="menu-link">
-                                                        <span class="svg-icon menu-icon">
-                                                            <img src="~/Images/icons8-purchase-order-19.5.png" />
-                                                        </span>
-                                                        <span class="menu-text">Lập Phiếu Nhận Hàng</span>
-                                                    </a>
-                                                </li>
                                             </ul>
                                         </div>
                                     </li>
@@ -143,7 +135,7 @@
                                         <div class="menu-submenu menu-submenu-classic menu-submenu-left">
                                             <ul class="menu-subnav">
                                                 <li class="menu-item" aria-haspopup="true">
-                                                    <a name="WarehouseManagement" href="/DetailWareHouse/Index" class="menu-link">
+                                                    <a name="WarehouseManagement" href="/Receipt/Index" class="menu-link">
                                                         <span class="svg-icon menu-icon">
                                                             <img src="~/Images/icons8-purchase-order-19.5.png" />
                                                         </span>
