--- a/iGMS/Views/Supplier/Adds.cshtml
+++ b/iGMS/Views/Supplier/Adds.cshtml
@@ -26,7 +26,7 @@
             <div class="col-10">
                 <div class="input-group-prepend">
                     <span class="input-group-text">NCC</span>
-                    <input  class="form-control" value="0000001" type="number" min="0000001" max="1000000" onkeyup="ValidateId()" onclick="ValidateId()" id="id" />
+                    <input  class="form-control" type="text" id="id" />
                 </div>
             </div>
         </div>
