--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -245,6 +245,8 @@
         } else {
             $("#HandHeld").hide()
             }
+            rfid.statusEvent = "statusEvent(%json)";
+            rfid.tagEvent = "TagHandler(%json)";
             RFIDEnumrate()
         });
         
@@ -347,11 +349,13 @@
         function RFIDEnumrate() {
 
             rfid.transport = 'serial'
-            rfid.enumerate();
             rfid.readerID = 'RFID1';
-            rfid.connect();
-        rfid.statusEvent = "statusEvent(%json)";
-        rfid.tagEvent = "TagHandler(%json)";
+
+            rfid.enumerate();
+            setTimeout(function () {
+                rfid.connect();
+            }, 1000);;
+      
         }
 
 
