--- a/iGMS/Views/DetailWareHouse/List.cshtml
+++ b/iGMS/Views/DetailWareHouse/List.cshtml
@@ -56,7 +56,9 @@
 
             } else {
                 $("#HandHeld").hide()
-            }          
+            }
+            rfid.statusEvent = "statusEvent(%json)";
+            rfid.tagEvent = "TagHandler(%json)";
             RFIDEnumrate()
         })
         
@@ -114,11 +116,12 @@
         function RFIDEnumrate() {
           
             rfid.transport = 'serial'
-            rfid.enumerate();
             rfid.readerID = 'RFID1';
-            rfid.connect();
-            rfid.statusEvent = "statusEvent(%json)";
-            rfid.tagEvent = "TagHandler(%json)";
+
+            rfid.enumerate();
+            setTimeout(function () {
+                rfid.connect();
+            }, 1000);
         }
         var lstEpcSended = [];
         $("#ScanMethod").change(function () {
