--- a/iGMS/Views/DetailWareHouse/Index2.cshtml
+++ b/iGMS/Views/DetailWareHouse/Index2.cshtml
@@ -67,6 +67,7 @@
                     <tbody name="tbd">
                     </tbody>
                 </table>
+                <button type="submit" class="btn btn-success mr-2" onclick="RFID()">Bắt Đầu Quét RFIF</button>
             </div>
         </div>
     </div>
@@ -200,5 +201,7 @@
             t = t.substring(0, t.length - 8)
             CompareReceipt(t)
         }
+
+
     </script>
 }
