--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -110,6 +110,7 @@
                     <tbody name="tbd">
                     </tbody>
                 </table>
+                <button type="submit" class="btn btn-success mr-2" onclick="RFID()">Bắt Đầu Quét RFIF</button>
             </div>
         </div>
         <div class="form-group row">
