--- a/iGMS/Views/SaleOrder/Index.cshtml
+++ b/iGMS/Views/SaleOrder/Index.cshtml
@@ -94,8 +94,8 @@
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Stt</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Mã Hàng</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Tên Hàng</th>
-                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Đơn Vị</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Số Lượng</th>
+                            <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">EPC</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Đơn Giá</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending">Thành Tiền</th>
                             <th class="sorting" tabindex="0" aria-controls="kt_datatable" rowspan="1" colspan="1" style="width: 190px;" aria-label="Company Email: activate to sort column ascending"></th>
@@ -204,15 +204,10 @@
                     <thead>
                         <tr role="row">
                             <th>Stt</th>
+                            <th class="">code</th>
                             <th class="">Mã Hàng</th>
                             <th class="">Tên Hàng</th>
-                            <th class="">Đơn Vị</th>
-                            <th class="">Số Lượng</th>
                             <th class="">Đơn Giá</th>
-                            <th class="">%Chiết Khấu</th>
-                            <th class="">Tiền Chiết Khấu</th>
-                            <th class="">%Thuế GTGT</th>
-                            <th class="">Tiền Thuế GTGT</th>
                             <th class="">Thành Tiền</th>
                         </tr>
                     </thead>
